RESOLVED FIXED240814
REGRESSION (r293885): [ macOS wk2 ] webrtc/canvas-to-peer-connection.html is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=240814
Summary REGRESSION (r293885): [ macOS wk2 ] webrtc/canvas-to-peer-connection.html is ...
Karl Rackler
Reported 2022-05-23 10:21:31 PDT
Description: webrtc/canvas-to-peer-connection.html The first failure I saw on the dashboard was on 5/6/2022 at r293885. r293885 removed usage of PixelBufferConformer in RealtimeOutgoingVideoSourceCocoa so that possibly introduced the consistent failure on macOS X86_64 wk2. REPRODUCTION STEPS I can reproduce this on r293885. Command: run-webkit-tests --root 293885 --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 -f --no-retry webrtc/canvas-to-peer-connection.html Result: Regressions: Unexpected text-only failures (1) webrtc/canvas-to-peer-connection.html [ Failure ] History: https://results.webkit.org/?suite=layout-tests&test=webrtc%2Fcanvas-to-peer-connection.html&platform=mac&limit=50000&architecture=x86_64 Diff: --- /Volumes/Data/worker/Apple-BigSur-Debug-WK2-Tests/build/layout-test-results/webrtc/canvas-to-peer-connection-expected.txt +++ /Volumes/Data/worker/Apple-BigSur-Debug-WK2-Tests/build/layout-test-results/webrtc/canvas-to-peer-connection-actual.txt @@ -1,3 +1,3 @@ -PASS draw: withWebGL +FAIL draw: withWebGL assert_array_approx_equals: rect 0,255,255,255 at 0.9,0.9 not found iteration: 0 property 1, expected 255 +/- 25, expected 255 but got 229 I have marked this test as a consistent failure while this issue is investigated.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-23 10:21:47 PDT
Karl Rackler
Comment 2 2022-05-23 10:30:19 PDT
EWS
Comment 3 2022-05-23 10:32:58 PDT
Test gardening commit r294652 (250876@main): <https://commits.webkit.org/250876@main> Reviewed commits have been landed. Closing PR #925 and removing active labels.
Alexey Proskuryakov
Comment 4 2022-05-23 19:35:18 PDT
Bots seem to be very certain on r293885 being the culprit, yes.
EWS
Comment 5 2022-05-30 07:06:11 PDT
Committed r295026 (251121@main): <https://commits.webkit.org/251121@main> Reviewed commits have been landed. Closing PR #1005 and removing active labels.
youenn fablet
Comment 6 2022-05-31 08:10:58 PDT
*** Bug 241006 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.